# docufind

./: .env.example  .gitignore  BUILD.bat  CONTRIBUTING.md  ICONS.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  build.ps1  cert.pfx  generate_cert.ps1  jest.config.js  jest.setup.js  new-signing-key.key  new-signing-key.key.pub  next.config.ts  package-lock.json  package.json  permissions.txt  release.ps1  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
__tests__/: utils.test.ts
landing/: index.html  script.js  styles.css
public/: electron.js  preload.js
src/: README.md
src-tauri/: 2  Cargo.toml  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib_old.rs  models.rs  state.rs  watcher.rs
src-tauri/src/background/: mod.rs  pdf_queue.rs
src-tauri/src/commands/: files.rs  folders.rs  migrations.rs  mod.rs  persistence.rs  scanning.rs  search.rs
src-tauri/src/extractors/: doc.rs  docx.rs  mod.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
src-tauri/src/folders/: mod.rs  tree.rs
src-tauri/src/search/: direct_search.rs  filters.rs  fts5_search.rs  history.rs  mod.rs  query_parser.rs  tantivy_search.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppSidebar.tsx  ElapsedTime.tsx  FilePreviewPane.tsx  FolderTree.tsx  PdfProgressIndicator.tsx  RotatingTip.tsx  SearchLoader.tsx  SearchLoadingState.tsx  StructuredContentRenderer.tsx
src/components/ui/: progress.tsx
src/lib/: firebase.ts  tauri-adapter.ts  updater.ts
(+2 files in other folders)
